[package]
name = "Repair-Framework"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
fern = "0.6"
crossterm = "0.27.0"
chrono = "0.4.31"
windows = {version = "0.58.0", features = ["Win32", "Win32_System", "Win32_System_Threading", "Wdk", "Wdk_System", "Wdk_System_Threading"] }
egui = "0.29.1"
eframe = "0.29.1"